src/test/ui/parser/item-free-static-no-body-semantic-fail.stderr
error: free static item without body
  --> $DIR/item-free-static-no-body-semantic-fail.rs:5:1
   |
LL | static A: u8;
   | ^^^^^^^^^^^^-
   |             |
   |             help: provide a definition for the static: `= <expr>;`

error: free static item without body
  --> $DIR/item-free-static-no-body-semantic-fail.rs:6:1
   |
LL | static B;
   | ^^^^^^^^-
   |         |
   |         help: provide a definition for the static: `= <expr>;`

error: free static item without body
  --> $DIR/item-free-static-no-body-semantic-fail.rs:8:1
   |
LL | static mut C: u8;
   | ^^^^^^^^^^^^^^^^-
   |                 |
   |                 help: provide a definition for the static: `= <expr>;`

error: free static item without body
  --> $DIR/item-free-static-no-body-semantic-fail.rs:9:1
   |
LL | static mut D;
   | ^^^^^^^^^^^^-
   |             |
   |             help: provide a definition for the static: `= <expr>;`

error: aborting due to 4 previous errors

